edit in the templete

--- a/AXIT templete/index.html
+++ b/AXIT templete/index.html
@@ -105,11 +105,11 @@
     </section>
     <section class="sub-list container-width">
         <div class="sub-img d-inline-block float-left">
-            <img src="/images/roof.jpg">
+            <img src="/images/roof.jpg" class="img-style">
         </div>
         <div class="sub-para d-inline-block float-left">
             <h3>Sub list section</h3>
-            <hr>
+            <hr class="hr-style">
             <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Cumque harum nemo ullam tempora consequatur
                 fugit fuga voluptas ratione quibusdam
@@ -134,7 +134,54 @@
                 </p>
             </div>
         </div>
+        <div class="clear"></div>
     </section>
-    
+    <section class="light-bg">
+        <section class="standard-sec container-width">
+            <div class="standard-para d-inline-block float-left">
+                <h2>Standard Picture Section</h2>
+                <hr class="hr-style">
+                <p class="grey-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur recusandae eum repudiandae corporis illo
+                    veniam perspiciatis alias vero omnis quia quam sequi,
+                    delectus quisquam non eligendi? Adipisci beatae officiis, fuga nobis,
+                    explicabo dignissimos cum delectus inventore nostrum reiciendis dolores aut.
+                </p>
+            </div>
+            <div class="standard-pic float-left">
+                <img src="/images/standard building.jpg" class="img-style">
+            </div>
+            <div class="clear"></div>
+        </section>
+    </section>
+    <section class="awesome-sec container-width">
+        <div class="awesome-head">
+            <h2 class="center-text">WHY THIS IS AWESOME</h2>
+            <hr class="hr-style">
+            <p class="grey-text center-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam.</p>
+        </div>
+        <div class="awesome-icon center-text d-inline-block float-left">
+            <i class="fa-regular fa-lightbulb d-inline-block"></i>
+            <h3>Thoughtful Design</h3>
+            <p class="grey-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+            maiores. Reiciendis consequatur 
+            voluptatibus qui doloremque ipsum iste dolor incidunt adipisci!</p>
+        </div>
+        <div class="awesome-icon mid-margin center-text d-inline-block float-left">
+            <i class="fa-regular fa-keyboard"></i>
+            <h3>Well crafted</h3>
+            <p class="grey-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+            maiores. Reiciendis consequatur 
+            voluptatibus qui doloremque ipsum iste dolor incidunt adipisci!</p>
+        </div>
+        <div class="awesome-icon center-text d-inline-block float-left">
+            <i class="fa-solid fa-bolt-lightning"></i>
+            <h3>Easy to customize</h3>
+            <p class="grey-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+            maiores. Reiciendis consequatur 
+            voluptatibus qui doloremque ipsum iste dolor incidunt adipisci!</p>
+        </div>
+        <div class="clear"></div>
+    </section>
 </body> 
 </html>
