--- a/AXIT templete/index.html
+++ b/AXIT templete/index.html
@@ -155,9 +155,9 @@
         </section>
     </section>
     <section class="awesome-sec container-width">
-        <div class="awesome-head">
+        <div class="head-card">
             <h2 class="center-text">WHY THIS IS AWESOME</h2>
-            <hr class="hr-style">
+            <hr class="hr-style hr-center">
             <p class="grey-text center-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam.</p>
         </div>
         <div class="awesome-icon center-text d-inline-block float-left">
@@ -183,5 +183,155 @@
         </div>
         <div class="clear"></div>
     </section>
+    <section class="light-bg">
+        <section class="pricing-sec container-width">
+            <div class="head-card">
+                <h2 class="">PRICING OPTIONS</h2>
+                <hr class="hr-style hr-center">
+                <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            </div>
+            <form class="basic price-form d-inline-block center-text float-left">
+                <label class="grey-bg white-text">Basic</label>
+                <label class="grey-bg white-text" id="dark-label1">
+                    <span class="d-sign">$</span><span class="first-digit">0</span>
+                    <pre class="grey-text">
+Free for life</pre>
+                </label>
+                <label class="orange-bg" id="empty-label1"></label>
+                <label class="white-bg grey-text">1 GB OF SPACE</label>
+                <label class="white-bg grey-text">10 GB OF BANSWIDTH</label>
+                <label class="white-bg grey-text">3 WEBSITES</label>
+                <label class="white-bg grey-text">BASIC CUTOMIZTION</label>
+                <label class="white-bg grey-text">WORDPRESS INTEGRATION</label>
+                <label class="white-bg grey-text">EMAIL SUPPORT</label>
+            </form>
+            <form class="price-form d-inline-block center-text float-left mid-margin">
+                <label class="grey-bg white-text">Professional</label>
+                <label class="grey-bg white-text">
+                    <span class="d-sign">$</span><span class="first-digit">1</span><span class="second-digit">9</span>
+                    <pre class="grey-text">
+Monthly Payment</pre>
+                </label>
+                <label class="orange-bg white-text">OUR MOST POPULAR</label>
+                <label class="white-bg grey-text">5 GB OF SPACE</label>
+                <label class="white-bg grey-text">50 GB OF BANSWIDTH</label>
+                <label class="white-bg grey-text">12 WEBSITES</label>
+                <label class="white-bg grey-text">ADVANCED CUTOMIZTION</label>
+                <label class="white-bg grey-text">WORDPRESS INTEGRATION</label>
+                <label class="white-bg grey-text">EMAIL SUPPORT</label>
+            </form>
+            <form class="basic price-form d-inline-block center-text float-left">
+                <label class="grey-bg white-text">Enterprise</label>
+                <label class="grey-bg white-text" id="dark-label2">
+                    <span class="d-sign">$</span><span class="first-digit">7</span><span class="second-digit">0</span>
+                    <pre class="grey-text">
+Monthly Payment</pre>
+                </label>
+                <label class="orange-bg white-text" id="empty-label2" ></label>
+                <label class="white-bg grey-text">UNLINITED SPACE</label>
+                <label class="white-bg grey-text">UNLIMITED BANSWIDTH</label>
+                <label class="white-bg grey-text">100 WEBSITES</label>
+                <label class="white-bg grey-text">ADVANCED CUTOMIZTION</label>
+                <label class="white-bg grey-text">WORDPRESS INTEGRATION</label>
+                <label class="white-bg grey-text">24/7 CUSTOMER SUPPORT</label>
+            </form>
+            <div class="clear"></div>
+        </section>
+    </section>
+    <section class="reviews container-width">
+        <div class="head-card">
+            <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
+            <hr class="hr-style hr-center">
+            <p class="grey-text">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        </div>
+        <div class="text-card light-bg grey-text d-inline-block float-left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti. Corrupti,
+            eaque sit facilis natus neque laboriosam consequatur tenetur reiciendis.
+        </div>
+        <div class="text-card light-bg grey-text d-inline-block float-left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti. Corrupti,
+            eaque sit facilis natus neque laboriosam consequatur tenetur reiciendis.
+        </div>
+        <div class="text-card light-bg grey-text d-inline-block float-left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti. Corrupti,
+            eaque sit facilis natus neque laboriosam consequatur tenetur reiciendis.
+        </div>
+        <div class="triangle d-inline-block float-left triangle1">
+            <i class="fa-solid fa-caret-down" id="tri-del"></i>
+        </div>
+        <div class="triangle d-inline-block float-left triangle2">
+            <i class="fa-solid fa-caret-down"></i>
+        </div>
+        <div class="triangle d-inline-block float-left triangle3">
+            <i class="fa-solid fa-caret-down"></i>
+        </div>
+        <div class="clear"></div>
+        <div class="jeremy customer d-inline-block float-left">
+            <img src="/images/customer.jpg" >
+        </div>
+        <div class="d-inline-block float-left t-margin">
+            <h4>Jeremy H.</h4>
+            <p class="grey-text">Manager</p>
+        </div>
+        <div class="john customer d-inline-block float-left">
+            <img src="/images/customer2.jpeg" >
+        </div>
+        <div class="d-inline-block float-left t-margin">
+            <h4>John S.</h4>
+            <p class="grey-text">Freelancer</p>
+        </div>
+        <div class="susan customer d-inline-block float-left">
+            <img src="/images/cusomer 3.jpg" >
+        </div>
+        <div class="d-inline-block float-left t-margin">
+            <h4>Susan W.</h4>
+            <p class="grey-text">Photographer</p>
+        </div>
+        <div class="clear"></div>
+    </section>
+    <section class="stylish-sec">
+        <div class="overlay">
+            <div class="stylish-text container-width center-text white-text">
+                <h2>STYLISH AXURE DESIGN</h2>
+                <hr class="hr-style hr-center">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
+                dolor! elit. Dolorum, dolor! dolor! elit. Dolorum, dolor! </p>
+                <button class="button-style">Download</button>
+            </div>
+        </div>
+    </section>
+    <section class="contact-us container-width">
+        <div class="center-text">
+            <h2>CONTACT US </h2>
+            <hr class="hr-style hr-center">
+            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, repellat</p>
+        </div>
+        <form>
+            <div class="user-data d-inline-block float-left">
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Subjuct">
+            </div>
+            <div class="message-area d-inline-block float-left">
+                <textarea placeholder="Message" rows="9"></textarea>
+            </div>
+            <div class="clear"></div>
+            <button class="button">Send Message</button>
+        </form>
+    </section>
+    <footer>
+        <div class="social-media grey-text container-width">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-google-plus-g"></i>
+            <i class="fa-brands fa-pinterest"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <i class="fa-solid fa-wifi"></i>
+        </div>
+        <div>
+            <p class="grey-text center-text"> &copy; 2015 Axure Themes</p>
+        </div>
+    </footer>
 </body> 
 </html>
