--- a/AXIT templete/index.html
+++ b/AXIT templete/index.html
@@ -14,19 +14,19 @@
             <h1 class="d-inline-block">AX<span class="orange-text">IT</span></h1>
             <ul class="d-inline-block float-right white-text">
                 <li>
-                    <a href="" class="white-text">Features</a>
+                    <a href="#feature" class="white-text">Features</a>
                 </li>
                 <li>
-                    <a href="" class="white-text">About</a>
+                    <a href="#about" class="white-text">About</a>
                 </li>
                 <li>
-                    <a href="" class="white-text">Pricing</a>
+                    <a href="#price" class="white-text">Pricing</a>
                 </li>
                 <li>
-                    <a href="" class="white-text">Reviews</a>
+                    <a href="#reviews" class="white-text">Reviews</a>
                 </li>
                 <li>
-                    <a href="" class="white-text">Contact</a>
+                    <a href="#contact" class="white-text">Contact</a>
                 </li>
             </ul>
             <div class="clear">
@@ -78,7 +78,7 @@
         </div>
     </section>
     <section class="light-bg">
-        <section class="container3 container-width light-bg">
+        <section class="container3 container-width light-bg" id="feature">
             <div>
                 <div class="tab-button d-inline-block float-left">
                     <button class="tab orange-bg">TAB1</button>
@@ -154,7 +154,7 @@
             <div class="clear"></div>
         </section>
     </section>
-    <section class="awesome-sec container-width">
+    <section class="awesome-sec container-width" id="about">
         <div class="head-card">
             <h2 class="center-text">WHY THIS IS AWESOME</h2>
             <hr class="hr-style hr-center">
@@ -184,7 +184,7 @@
         <div class="clear"></div>
     </section>
     <section class="light-bg">
-        <section class="pricing-sec container-width">
+        <section class="pricing-sec container-width" id="price">
             <div class="head-card">
                 <h2 class="">PRICING OPTIONS</h2>
                 <hr class="hr-style hr-center">
@@ -194,8 +194,7 @@
                 <label class="grey-bg white-text">Basic</label>
                 <label class="grey-bg white-text" id="dark-label1">
                     <span class="d-sign">$</span><span class="first-digit">0</span>
-                    <pre class="grey-text">
-Free for life</pre>
+                    <p class="grey-bg grey-text">free for life</p>
                 </label>
                 <label class="orange-bg" id="empty-label1"></label>
                 <label class="white-bg grey-text">1 GB OF SPACE</label>
@@ -209,8 +208,7 @@ Free for life</pre>
                 <label class="grey-bg white-text">Professional</label>
                 <label class="grey-bg white-text">
                     <span class="d-sign">$</span><span class="first-digit">1</span><span class="second-digit">9</span>
-                    <pre class="grey-text">
-Monthly Payment</pre>
+                    <p class="grey-bg grey-text">Monthly Payment</p>
                 </label>
                 <label class="orange-bg white-text">OUR MOST POPULAR</label>
                 <label class="white-bg grey-text">5 GB OF SPACE</label>
@@ -224,8 +222,7 @@ Monthly Payment</pre>
                 <label class="grey-bg white-text">Enterprise</label>
                 <label class="grey-bg white-text" id="dark-label2">
                     <span class="d-sign">$</span><span class="first-digit">7</span><span class="second-digit">0</span>
-                    <pre class="grey-text">
-Monthly Payment</pre>
+                    <p class="grey-bg grey-text">Monthly Payment</p>
                 </label>
                 <label class="orange-bg white-text" id="empty-label2" ></label>
                 <label class="white-bg grey-text">UNLINITED SPACE</label>
@@ -238,7 +235,7 @@ Monthly Payment</pre>
             <div class="clear"></div>
         </section>
     </section>
-    <section class="reviews container-width">
+    <section class="reviews container-width" id="reviews">
         <div class="head-card">
             <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
             <hr class="hr-style hr-center">
@@ -300,7 +297,7 @@ Monthly Payment</pre>
             </div>
         </div>
     </section>
-    <section class="contact-us container-width">
+    <section class="contact-us container-width" id="contact">
         <div class="center-text">
             <h2>CONTACT US </h2>
             <hr class="hr-style hr-center">
