final edits in stlyle file

--- a/AXIT templete/index.html
+++ b/AXIT templete/index.html
@@ -33,7 +33,7 @@
             </div>
         </section>
     </nav>
-    <section class="bg-img">
+    <section class="bg-img" id="home">
         <div class="overlay">
             <div class="container-width">
                 <div class="card1 d-inline-block">
@@ -190,48 +190,48 @@
                 <hr class="hr-style hr-center">
                 <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
-            <form class="basic price-form d-inline-block center-text float-left">
-                <label class="grey-bg white-text">Basic</label>
-                <label class="grey-bg white-text" id="dark-label1">
+            <ul class="basic price-list d-inline-block center-text float-left">
+                <li class="grey-bg white-text">Basic</li>
+                <li class="grey-bg white-text" id="dark-list1">
                     <span class="d-sign">$</span><span class="first-digit">0</span>
                     <p class="grey-bg grey-text">free for life</p>
-                </label>
-                <label class="orange-bg" id="empty-label1"></label>
-                <label class="white-bg grey-text">1 GB OF SPACE</label>
-                <label class="white-bg grey-text">10 GB OF BANSWIDTH</label>
-                <label class="white-bg grey-text">3 WEBSITES</label>
-                <label class="white-bg grey-text">BASIC CUTOMIZTION</label>
-                <label class="white-bg grey-text">WORDPRESS INTEGRATION</label>
-                <label class="white-bg grey-text">EMAIL SUPPORT</label>
-            </form>
-            <form class="price-form d-inline-block center-text float-left mid-margin">
-                <label class="grey-bg white-text">Professional</label>
-                <label class="grey-bg white-text">
+                </li>
+                <li class="orange-bg" id="empty-list1"></li>
+                <li class="white-bg grey-text">1 GB OF SPACE</li>
+                <li class="white-bg grey-text">10 GB OF BANSWIDTH</li>
+                <li class="white-bg grey-text">3 WEBSITES</li>
+                <li class="white-bg grey-text">BASIC CUTOMIZTION</li>
+                <li class="white-bg grey-text">WORDPRESS INTEGRATION</li>
+                <li class="white-bg grey-text">EMAIL SUPPORT</li>
+            </ul>
+            <ul class="price-list d-inline-block center-text float-left mid-margin">
+                <li class="grey-bg white-text">Professional</li>
+                <li class="grey-bg white-text">
                     <span class="d-sign">$</span><span class="first-digit">1</span><span class="second-digit">9</span>
                     <p class="grey-bg grey-text">Monthly Payment</p>
-                </label>
-                <label class="orange-bg white-text">OUR MOST POPULAR</label>
-                <label class="white-bg grey-text">5 GB OF SPACE</label>
-                <label class="white-bg grey-text">50 GB OF BANSWIDTH</label>
-                <label class="white-bg grey-text">12 WEBSITES</label>
-                <label class="white-bg grey-text">ADVANCED CUTOMIZTION</label>
-                <label class="white-bg grey-text">WORDPRESS INTEGRATION</label>
-                <label class="white-bg grey-text">EMAIL SUPPORT</label>
-            </form>
-            <form class="basic price-form d-inline-block center-text float-left">
-                <label class="grey-bg white-text">Enterprise</label>
-                <label class="grey-bg white-text" id="dark-label2">
+                </li>
+                <li class="orange-bg white-text">OUR MOST POPULAR</li>
+                <li class="white-bg grey-text">5 GB OF SPACE</li>
+                <li class="white-bg grey-text">50 GB OF BANSWIDTH</li>
+                <li class="white-bg grey-text">12 WEBSITES</li>
+                <li class="white-bg grey-text">ADVANCED CUTOMIZTION</li>
+                <li class="white-bg grey-text">WORDPRESS INTEGRATION</li>
+                <li class="white-bg grey-text">EMAIL SUPPORT</li>
+            </ul>
+            <ul class="basic price-list d-inline-block center-text float-left">
+                <li class="grey-bg white-text">Enterprise</li>
+                <li class="grey-bg white-text" id="dark-list2">
                     <span class="d-sign">$</span><span class="first-digit">7</span><span class="second-digit">0</span>
                     <p class="grey-bg grey-text">Monthly Payment</p>
-                </label>
-                <label class="orange-bg white-text" id="empty-label2" ></label>
-                <label class="white-bg grey-text">UNLINITED SPACE</label>
-                <label class="white-bg grey-text">UNLIMITED BANSWIDTH</label>
-                <label class="white-bg grey-text">100 WEBSITES</label>
-                <label class="white-bg grey-text">ADVANCED CUTOMIZTION</label>
-                <label class="white-bg grey-text">WORDPRESS INTEGRATION</label>
-                <label class="white-bg grey-text">24/7 CUSTOMER SUPPORT</label>
-            </form>
+                </li>
+                <li class="orange-bg white-text" id="empty-list2" ></li>
+                <li class="white-bg grey-text">UNLINITED SPACE</li>
+                <li class="white-bg grey-text">UNLIMITED BANSWIDTH</li>
+                <li class="white-bg grey-text">100 WEBSITES</li>
+                <li class="white-bg grey-text">ADVANCED CUTOMIZTION</li>
+                <li class="white-bg grey-text">WORDPRESS INTEGRATION</li>
+                <li class="white-bg grey-text">24/7 CUSTOMER SUPPORT</li>
+            </ul>
             <div class="clear"></div>
         </section>
     </section>
@@ -244,23 +244,20 @@
         <div class="text-card light-bg grey-text d-inline-block float-left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti. Corrupti,
             eaque sit facilis natus neque laboriosam consequatur tenetur reiciendis.
+            <div class="triangle-down">
+            </div>
         </div>
         <div class="text-card light-bg grey-text d-inline-block float-left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti. Corrupti,
             eaque sit facilis natus neque laboriosam consequatur tenetur reiciendis.
+            <div class="triangle-down">
+            </div>
         </div>
         <div class="text-card light-bg grey-text d-inline-block float-left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti. Corrupti,
             eaque sit facilis natus neque laboriosam consequatur tenetur reiciendis.
-        </div>
-        <div class="triangle d-inline-block float-left triangle1">
-            <i class="fa-solid fa-caret-down" id="tri-del"></i>
-        </div>
-        <div class="triangle d-inline-block float-left triangle2">
-            <i class="fa-solid fa-caret-down"></i>
-        </div>
-        <div class="triangle d-inline-block float-left triangle3">
-            <i class="fa-solid fa-caret-down"></i>
+            <div class="triangle-down">
+            </div>
         </div>
         <div class="clear"></div>
         <div class="jeremy customer d-inline-block float-left">
@@ -316,6 +313,9 @@
             <button class="button">Send Message</button>
         </form>
     </section>
+    <a href="#home" class="scroll-btn">
+        <i class="fa-solid fa-angle-up"></i>
+    </a>
     <footer>
         <div class="social-media grey-text container-width">
             <i class="fa-brands fa-facebook-f"></i>
