edit is style file

--- a/float task/index.html
+++ b/float task/index.html
@@ -23,6 +23,9 @@
                 <div class="overlay">
                     <a href="">Read More</a>
                 </div>
+                <div class="">
+                    <img src="/images/customer.jpg" class="img-style">
+                </div>
             </div>
             <div class="bot">
                 <h2 class="aqua-text">LATEST NEWS POST</h2>
@@ -45,6 +48,9 @@
                     <span>3</span>
                 </div>
                 <div class="mid2 mid-style">
+                    <div class="">
+                        <img src="/images/customer2.jpeg" class="img-style">
+                    </div>
                 </div>
                 <div class="bot">
                     <h2 class="aqua-text">LATEST NEWS POST</h2>
@@ -67,6 +73,9 @@
                         <span>3</span>
                     </div>
                     <div class="mid3 mid-style">
+                        <div class="">
+                            <img src="/images/cusomer 3.jpg" class="img-style">
+                        </div>
                     </div>
                     <div class="bot">
                         <h2 class="aqua-text">LATEST NEWS POST</h2>
